src/objects/User_Stories__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effort_on_Date__c</fullName>
        <label>Effort on Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Effort_Covered__c</fullName>
        <label>Total Effort Covered</label>
        <summarizedField>Effort_Information__c.Effort_on_Date__c</summarizedField>
        <summaryForeignKey>Effort_Information__c.User_Story__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Effort_Req__c</fullName>
        <label>Total Effort Req</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tracker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>User Stories Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>